Melhorias no Codigo

--- a/readme
+++ b/readme
@@ -1,3 +1,7 @@
 21/07/2011
 - Corrigido o problema do Rodapé que ficava no meio da página
 - Terminado o CSS da página de Experiencia e Contato
+
+23/07/2011
+- Estilizadas as fontes com CSS3
+- Corrigido problemas em monitores 1024
